Fixed background-logo overlapping content

--- a/src/Components/Drink_page.css
+++ b/src/Components/Drink_page.css
@@ -4,6 +4,8 @@ h2 {
 }
 
 .drink-page-content {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,8 +41,8 @@ h2 {
   cursor: pointer;
 }
 
-.drink-page-header .favorite-icon.favorite {
-  color: #ffd500ff;
+.drink-page-header .favorite-icon.material-icons.active {
+  color: #ffd500;
 }
 
 .image-container {
@@ -61,7 +63,7 @@ h2 {
 }
 
 .back-button-container:active {
-  background-color: #ffd500ff;
+  background-color: #ffd500;
 }
 
 .back-button {
@@ -99,7 +101,7 @@ h2 {
 }
 
 .dark-gray-box {
-  background-color: #111;
+  background-color: #161616;
   padding: 15px;
   border-radius: 5px;
   margin-top: 20px;
